Fixing missing metadata and adding link styling in dark mode.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -49,4 +49,7 @@ body{
 		color: #dee2e6;
 		background: $black;
 	}
+	a {
+		color: #dee2e6;
+	}
 }
